去掉原来的服务端的Vector3库，直接引用Unity.Mathematics库，逻辑层统一使用Mathematics。这样前后端的数学库就完全统一了

--- a/Unity/Assets/Scripts/Codes/Hotfix/Unity.Hotfix.Codes.asmdef
+++ b/Unity/Assets/Scripts/Codes/Hotfix/Unity.Hotfix.Codes.asmdef
@@ -5,7 +5,8 @@
         "Unity.Mono",
         "Unity.ThirdParty",
         "Unity.Core",
-        "Unity.Model.Codes"
+        "Unity.Model.Codes",
+        "Unity.Mathematics"
     ],
     "includePlatforms": [
         "Editor"
