--- a/Unity/Assets/Scripts/Empty/Hotfix/Unity.Hotfix.asmdef
+++ b/Unity/Assets/Scripts/Empty/Hotfix/Unity.Hotfix.asmdef
@@ -5,7 +5,8 @@
         "Unity.Model",
         "Unity.ThirdParty",
         "Unity.Mono",
-        "Unity.Core"
+        "Unity.Core",
+        "Unity.Mathematics"
     ],
     "includePlatforms": [
         "Editor"
