--- a/Unity/Assets/Scripts/Empty/HotfixView/Unity.HotfixView.asmdef
+++ b/Unity/Assets/Scripts/Empty/HotfixView/Unity.HotfixView.asmdef
@@ -7,7 +7,8 @@
         "Unity.Model",
         "Unity.Hotfix",
         "Unity.ModelView",
-        "Unity.Core"
+        "Unity.Core",
+        "Unity.Mathematics"
     ],
     "includePlatforms": [
         "Editor"
