--- a/Unity/Assets/Scripts/Empty/ModelView/Unity.ModelView.asmdef
+++ b/Unity/Assets/Scripts/Empty/ModelView/Unity.ModelView.asmdef
@@ -5,7 +5,8 @@
         "Unity.Model",
         "Unity.Mono",
         "Unity.ThirdParty",
-        "Unity.Core"
+        "Unity.Core",
+        "Unity.Mathematics"
     ],
     "includePlatforms": [
         "Editor"
