--- a/Unity/Assets/Scripts/Codes/Model/Generate/Client/Unity.GenerateClient.asmdef
+++ b/Unity/Assets/Scripts/Codes/Model/Generate/Client/Unity.GenerateClient.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Unity.Ignore",
+    "name": "Unity.GenerateClient",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
