1.Actor消息判断如果是发向自己的进程则不用通过网络，直接处理即可，大大提升性能 2.修复一个协程锁超时的bug 3.NLog放到Core中，Unity做Server的时候可以用到

--- a/DotNet/Hotfix/DotNet.Hotfix.csproj
+++ b/DotNet/Hotfix/DotNet.Hotfix.csproj
@@ -37,6 +37,7 @@
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\..\Share\Analyzer\Share.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+        <ProjectReference Include="..\App\DotNet.App.csproj" />
         <ProjectReference Include="..\Model\DotNet.Model.csproj" />
     </ItemGroup>
 
