集成HybridCLR，使用步骤: 1.点击HybridCLR->Installer,等待安装完成 2.ET->BuildTool->BuildModelAndHotfix,编译好要热更的dll 3.点击HybridCLR->Generate->all 4.点击HybridCLR->CopyAotDlls,这一步会把需要补充元数据的dll复制到Assets/Bundles/AotDlls目录，并且设置ab包标签 然后打包即可

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,7 @@ Publish/
 /Unity/Unity.ModelView.Codes.csproj
 /Unity/Unity.GenerateClient.csproj
 /Unity/Unity.GenerateServer.csproj
+
+/Unity/Assets/Bundles/AotDlls
+/Unity/Assets/Bundles/AotDlls.meta
+/Unity/HybridCLRData
