Invoke方法加个重载，type为0的时候可以不填

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ Publish/
 /Unity/Assets/Bundles/AotDlls
 /Unity/Assets/Bundles/AotDlls.meta
 /Unity/HybridCLRData
+/Unity/Assembly-CSharp-firstpass.csproj
