--- a/Unity/Assets/Scripts/Codes/Hotfix/Unity.Hotfix.Codes.asmdef
+++ b/Unity/Assets/Scripts/Codes/Hotfix/Unity.Hotfix.Codes.asmdef
@@ -6,7 +6,8 @@
         "Unity.Core",
         "Unity.Model.Codes",
         "Unity.Mathematics",
-        "Unity.Loader"
+        "Unity.Loader",
+        "MemoryPack"
     ],
     "includePlatforms": [
         "Editor"
