--- a/Unity/Assets/Scripts/Codes/ModelView/Unity.ModelView.Codes.asmdef
+++ b/Unity/Assets/Scripts/Codes/ModelView/Unity.ModelView.Codes.asmdef
@@ -8,9 +8,7 @@
         "Unity.Mathematics",
         "Unity.Loader"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
