--- a/Unity/Assets/Scripts/Empty/HotfixView/Unity.HotfixView.asmdef
+++ b/Unity/Assets/Scripts/Empty/HotfixView/Unity.HotfixView.asmdef
@@ -8,7 +8,8 @@
         "Unity.ModelView",
         "Unity.Core",
         "Unity.Mathematics",
-        "Unity.Loader"
+        "Unity.Loader",
+        "MemoryPack"
     ],
     "includePlatforms": [
         "Editor"
