--- a/Unity/Assets/Scripts/Empty/Model/Unity.Model.asmdef
+++ b/Unity/Assets/Scripts/Empty/Model/Unity.Model.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "Unity.ThirdParty",
         "Unity.Core",
-        "Unity.Mathematics"
+        "Unity.Mathematics",
+        "MemoryPack"
     ],
     "includePlatforms": [
         "Editor"
