--- a/Unity/Assets/Scripts/Empty/ModelView/Unity.ModelView.asmdef
+++ b/Unity/Assets/Scripts/Empty/ModelView/Unity.ModelView.asmdef
@@ -6,7 +6,8 @@
         "Unity.ThirdParty",
         "Unity.Core",
         "Unity.Mathematics",
-        "Unity.Loader"
+        "Unity.Loader",
+        "MemoryPack"
     ],
     "includePlatforms": [
         "Editor"
