兼容Protobuf-net跟MemoryPack两种序列化，在SerializeHelper.UseMemoryPack进行切换 MemoryPack只能在EnableCodes模式中起作用，原因是AssemblyBuilder编译dll模式无法进行Source generator， 导致无法生成MemoryPack的patial代码

--- a/Unity/Assets/Scripts/Empty/Hotfix/Unity.Hotfix.asmdef
+++ b/Unity/Assets/Scripts/Empty/Hotfix/Unity.Hotfix.asmdef
@@ -9,9 +9,7 @@
         "Unity.Loader",
         "MemoryPack"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
