--- a/Unity/Assets/Scripts/Empty/Model/Unity.Model.asmdef
+++ b/Unity/Assets/Scripts/Empty/Model/Unity.Model.asmdef
@@ -7,9 +7,7 @@
         "Unity.Mathematics",
         "MemoryPack"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
