--- a/Unity/Assets/Scripts/Empty/HotfixView/Unity.HotfixView.asmdef
+++ b/Unity/Assets/Scripts/Empty/HotfixView/Unity.HotfixView.asmdef
@@ -11,9 +11,7 @@
         "Unity.Loader",
         "MemoryPack"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
