--- a/Unity/Assets/Scripts/Empty/ModelView/Unity.ModelView.asmdef
+++ b/Unity/Assets/Scripts/Empty/ModelView/Unity.ModelView.asmdef
@@ -9,9 +9,7 @@
         "Unity.Loader",
         "MemoryPack"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
