--- a/DotNet/Model/DotNet.Model.csproj
+++ b/DotNet/Model/DotNet.Model.csproj
@@ -47,5 +47,8 @@
         <ProjectReference Include="..\Core\DotNet.Core.csproj" />
         <ProjectReference Include="..\Loader\DotNet.Loader.csproj" />
         <ProjectReference Include="..\ThirdParty\DotNet.ThirdParty.csproj" />
+    </ItemGroup> 
+    <ItemGroup>
+      <Folder Include="Client\LockStep\" />
     </ItemGroup>
 </Project>
