每帧发送LSWorld的hash到服务端校验

--- a/DotNet/Hotfix/DotNet.Hotfix.csproj
+++ b/DotNet/Hotfix/DotNet.Hotfix.csproj
@@ -40,5 +40,8 @@
         <ProjectReference Include="..\Loader\DotNet.Loader.csproj" />
         <ProjectReference Include="..\Model\DotNet.Model.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Client\LockStep\" />
+    </ItemGroup>
 
 </Project>
