--- a/Unity/Assets/Scripts/Codes/HotfixView/Unity.HotfixView.Codes.asmdef
+++ b/Unity/Assets/Scripts/Codes/HotfixView/Unity.HotfixView.Codes.asmdef
@@ -8,7 +8,8 @@
         "Unity.Hotfix.Codes",
         "Unity.ModelView.Codes",
         "Unity.Mathematics",
-        "Unity.Loader"
+        "Unity.Loader",
+        "YooAsset"
     ],
     "includePlatforms": [
         "Editor"
