修改了运行指南

--- a/Share/Share.SourceGenerator/Share.SourceGenerator.csproj
+++ b/Share/Share.SourceGenerator/Share.SourceGenerator.csproj
@@ -28,8 +28,8 @@
         </PackageReference>
     </ItemGroup>
 
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Copy SourceFiles="$(TargetDir)/$(TargetName).dll" DestinationFolder="$(ProjectDir)/../../Unity/Assets/Plugins/" ContinueOnError="false" />
-    </Target>
+<!--    <Target Name="PostBuild" AfterTargets="PostBuildEvent">-->
+<!--        <Copy SourceFiles="$(TargetDir)/$(TargetName).dll" DestinationFolder="$(ProjectDir)/../../Unity/Assets/Plugins/" ContinueOnError="false" />-->
+<!--    </Target>-->
 
 </Project>
