Unity统一加上source generator dll的引用

--- a/Unity/Directory.Build.props
+++ b/Unity/Directory.Build.props
@@ -4,4 +4,7 @@
     <NoWarn>0169,0649,3021,8981</NoWarn>
     <DebugType>Portable</DebugType>
   </PropertyGroup>
+  <ItemGroup>
+    <Analyzer Include="Assets\Plugins\Share.SourceGenerator.dll" />
+  </ItemGroup>
 </Project>
