--- a/Unity/Assets/Scripts/AllModel/Unity.AllModel.asmdef
+++ b/Unity/Assets/Scripts/AllModel/Unity.AllModel.asmdef
@@ -1,10 +1,11 @@
 {
-    "name": "Unity.Model",
+    "name": "Unity.AllModel",
     "rootNamespace": "ET",
     "references": [
         "Unity.ThirdParty",
         "Unity.Core",
         "Unity.Mathematics",
+        "Unity.Loader",
         "MemoryPack"
     ],
     "includePlatforms": [],
@@ -14,8 +15,8 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [
-        "!ENABLE_DLL"
+        "ENABLE_DLL"
     ],
     "versionDefines": [],
-    "noEngineReferences": true
+    "noEngineReferences": false
 }
