--- a/Unity/Assets/Scripts/ModelView/Unity.ModelView.asmdef
+++ b/Unity/Assets/Scripts/ModelView/Unity.ModelView.asmdef
@@ -15,7 +15,7 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [
-        "!ENABLE_CODES"
+        "!ENABLE_DLL"
     ],
     "versionDefines": [],
     "noEngineReferences": false
