调整程序集依赖关系，DotNet.Model不需要引用DotNet.Loader, 因为Unity.Model为了完全不引用Unity的程序集，所以Unity.Model也并不引用Unity.Loader, 这里让Unity跟DotNet两者保持一致

--- a/DotNet/App/DotNet.App.csproj
+++ b/DotNet/App/DotNet.App.csproj
@@ -28,6 +28,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Loader\DotNet.Loader.csproj" />
     <ProjectReference Include="..\Model\DotNet.Model.csproj" />
   </ItemGroup>
 </Project>
