manifest 适配 yooaseet

--- a/Unity/Packages/manifest.json
+++ b/Unity/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.render-pipelines.universal": "12.1.10",
+    "com.unity.scriptablebuildpipeline": "1.20.2",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
