调整消息的异常处理机制

--- a/Config/NLog/NLog.config
+++ b/Config/NLog/NLog.config
@@ -52,7 +52,7 @@
 				archiveFileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.{#}.Error.log"
 				fileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.${date:format=yyyyMMddHH}.Error.log"
 				deleteOldFileOnStartup="false"
-				layout="${longdate} ${message}" />
+				layout="${longdate} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=3} ${message}" />
 	</targets>
 
 	<targets async="true">
