增加FiberLog，每个Fiber都独立log文件

--- a/Config/NLog/NLog.config
+++ b/Config/NLog/NLog.config
@@ -8,8 +8,8 @@
 				archiveNumbering="Date"
 				archiveEvery="Hour"
 				archiveDateFormat="yyyyMMddHH"
-				archiveFileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.{#}.Debug.log"
-				fileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.${date:format=yyyyMMddHH}.Debug.log"
+				archiveFileName="${basedir}/../Logs/${logger}.{#}.${var:fiberName}.Debug.log"
+				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.${var:fiberName}.Debug.log"
 				deleteOldFileOnStartup="false"
 				layout="${longdate} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=3} ${message}" />
 	</targets>
@@ -22,8 +22,8 @@
 				archiveNumbering="Date"
 				archiveEvery="Hour"
 				archiveDateFormat="yyyyMMddHH"
-				archiveFileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.{#}.Info.log"
-				fileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.${date:format=yyyyMMddHH}.Info.log"
+				archiveFileName="${basedir}/../Logs/${logger}.{#}.${var:fiberName}.Info.log"
+				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.${var:fiberName}.Info.log"
 				deleteOldFileOnStartup="false"
 				layout="${longdate} ${message}" />
 	</targets>
@@ -36,8 +36,8 @@
 				archiveNumbering="Date"
 				archiveEvery="Hour"
 				archiveDateFormat="yyyyMMddHH"
-				archiveFileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.{#}.Warn.log"
-				fileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.${date:format=yyyyMMddHH}.Warn.log"
+				archiveFileName="${basedir}/../Logs/${logger}.{#}.${var:fiberName}.Warn.log"
+				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.${var:fiberName}.Warn.log"
 				deleteOldFileOnStartup="false"
 				layout="${longdate} ${message}" />
 	</targets>
@@ -49,8 +49,8 @@
 				archiveNumbering="Date"
 				archiveEvery="Hour"
 				archiveDateFormat="yyyyMMddHH"
-				archiveFileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.{#}.Error.log"
-				fileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.${date:format=yyyyMMddHH}.Error.log"
+				archiveFileName="${basedir}/../Logs/${logger}.{#}.${var:fiberName}.Error.log"
+				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.${var:fiberName}.Error.log"
 				deleteOldFileOnStartup="false"
 				layout="${longdate} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=3} ${message}" />
 	</targets>
@@ -59,25 +59,11 @@
 		<target name="ErrorConsole" xsi:type="Console" layout="${longdate} ${message}" />
 	</targets>
 
-	<targets async="true">
-		<target name="Watcher" xsi:type="File"
-				openFileCacheTimeout="10"
-				keepFileOpen="true"
-				fileName="${basedir}/../Logs/${logger}.${var:appIdFormat}.Debug.log"
-				deleteOldFileOnStartup="false"
-				layout="${longdate} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=3} ${message}" />
-	</targets>
-
-	<targets async="true">
-		<target name="RobotConsole" xsi:type="Console" layout="${message}" />
-	</targets>
-
 	<rules>
-		<logger ruleName="ServerDebug" name="Server" minlevel="Trace" maxlevel="Error" writeTo="ServerDebug" />
-		<logger ruleName="ServerInfo" name="Server" minlevel="Info" maxlevel="Info" writeTo="ServerInfo" />
-		<logger ruleName="ServerWarn" name="Server" minlevel="Warn" maxlevel="Warn" writeTo="ServerWarn" />
-		<logger ruleName="ServerError" name="Server" minlevel="Error" maxlevel="Error" writeTo="ServerError" />
-		<logger ruleName="ErrorConsole" name="Server" minlevel="Warn" maxlevel="Error" writeTo="ErrorConsole" />
-		<logger ruleName="Watcher" name="Watcher" minlevel="Trace" maxlevel="Error" writeTo="Watcher" />
+		<logger ruleName="ServerDebug" name="*" minlevel="Trace" maxlevel="Error" writeTo="ServerDebug" />
+		<logger ruleName="ServerInfo" name="*" minlevel="Info" maxlevel="Info" writeTo="ServerInfo" />
+		<logger ruleName="ServerWarn" name="*" minlevel="Warn" maxlevel="Warn" writeTo="ServerWarn" />
+		<logger ruleName="ServerError" name="*" minlevel="Error" maxlevel="Error" writeTo="ServerError" />
+		<logger ruleName="ErrorConsole" name="*" minlevel="Warn" maxlevel="Error" writeTo="ErrorConsole" />
 	</rules>
 </nlog>
