FiberManager.cs对外返回的Task改成ETTask

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,6 @@ _ReSharper.CSharp/
 .idea/
 /Unity/Logs
 /Unity/Assets/StreamingAssets/
-/netcoreapp2.0
 /Unity/Assets/StreamingAssets.meta
 .DS_Store
 Server/.DS_Store
@@ -49,12 +48,7 @@ Server/.DS_Store
 .objs/
 /Unity/.gradle
 /*.user
-/ToolsApp/
 /Unity/Unity.Editor.csproj
-/Unity/Assets/Bundles/Code/Code.dll.bytes
-/Unity/Assets/Bundles/Code/Code.dll.bytes.meta
-/Unity/Assets/Bundles/Code/Code.pdb.bytes
-/Unity/Assets/Bundles/Code/Code.pdb.bytes.meta
 /Unity/Assembly-CSharp.csproj
 ~$*.xlsx
 ~$*.xlsx.meta
@@ -73,15 +67,6 @@ Server/.DS_Store
 /Unity/Unity.Ignore.csproj
 Publish/
 /Unity/Assets/Bundles/Code/*
-/Unity/Assets/Bundles/AssetBundleOutput.meta
-/Unity/Assets/Bundles/AssetBundleOutput
-/Unity/Assets/Bundles/AssetBundleSourceData
-/Unity/Assets/Bundles/AssetBundleSourceData.meta
-/Unity/Unity.Editor.Codes.csproj
-/Unity/Unity.Hotfix.Codes.csproj
-/Unity/Unity.HotfixView.Codes.csproj
-/Unity/Unity.Model.Codes.csproj
-/Unity/Unity.ModelView.Codes.csproj
 /Unity/Unity.GenerateClient.csproj
 /Unity/Unity.GenerateServer.csproj
 
@@ -92,3 +77,4 @@ Publish/
 
 /Unity/*.csproj
 /Unity/*.vsconfig
+WebGL
