修复一个日志错误，fiber的日志会打到其它fiber中，原因是NLog中传递FiberName这个配置变量是全局的，导致后面的会覆盖前面的

--- a/Config/NLog/NLog.config
+++ b/Config/NLog/NLog.config
@@ -8,8 +8,8 @@
 				archiveNumbering="Date"
 				archiveEvery="Hour"
 				archiveDateFormat="yyyyMMddHH"
-				archiveFileName="${basedir}/../Logs/${logger}.{#}.${var:fiberName}.Debug.log"
-				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.${var:fiberName}.Debug.log"
+				archiveFileName="${basedir}/../Logs/${logger}.{#}.Debug.log"
+				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.Debug.log"
 				deleteOldFileOnStartup="false"
 				layout="${longdate} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=3} ${message}" />
 	</targets>
@@ -22,8 +22,8 @@
 				archiveNumbering="Date"
 				archiveEvery="Hour"
 				archiveDateFormat="yyyyMMddHH"
-				archiveFileName="${basedir}/../Logs/${logger}.{#}.${var:fiberName}.Info.log"
-				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.${var:fiberName}.Info.log"
+				archiveFileName="${basedir}/../Logs/${logger}.{#}.Info.log"
+				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.Info.log"
 				deleteOldFileOnStartup="false"
 				layout="${longdate} ${message}" />
 	</targets>
@@ -36,8 +36,8 @@
 				archiveNumbering="Date"
 				archiveEvery="Hour"
 				archiveDateFormat="yyyyMMddHH"
-				archiveFileName="${basedir}/../Logs/${logger}.{#}.${var:fiberName}.Warn.log"
-				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.${var:fiberName}.Warn.log"
+				archiveFileName="${basedir}/../Logs/${logger}.{#}.Warn.log"
+				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.Warn.log"
 				deleteOldFileOnStartup="false"
 				layout="${longdate} ${message}" />
 	</targets>
@@ -49,8 +49,8 @@
 				archiveNumbering="Date"
 				archiveEvery="Hour"
 				archiveDateFormat="yyyyMMddHH"
-				archiveFileName="${basedir}/../Logs/${logger}.{#}.${var:fiberName}.Error.log"
-				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.${var:fiberName}.Error.log"
+				archiveFileName="${basedir}/../Logs/${logger}.{#}.Error.log"
+				fileName="${basedir}/../Logs/${logger}.${date:format=yyyyMMddHH}.Error.log"
 				deleteOldFileOnStartup="false"
 				layout="${longdate} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=3} ${message}" />
 	</targets>
