统一使用AllModel和AllHotfix
1.不再显示Model、ModelView、Hotfix、HotfixView，减少理解成本。
2.统一ENABLE_DLL和非ENABLE_DLL的解决方案视图，统一使用AllModel和AllHotfix。

--- a/Unity/Assets/Scripts/AllHotfix/Unity.AllHotfix.asmdef
+++ b/Unity/Assets/Scripts/AllHotfix/Unity.AllHotfix.asmdef
@@ -16,9 +16,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [
-        "ENABLE_DLL"
-    ],
+    "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
 }
