修复非ENABLE_DLL下编辑器不能引用逻辑代码的问题
补充提交Editor引用

--- a/Unity/Assets/Scripts/Editor/Unity.Editor.asmdef
+++ b/Unity/Assets/Scripts/Editor/Unity.Editor.asmdef
@@ -10,7 +10,9 @@
         "Unity.Model",
         "Unity.Hotfix",
         "YooAsset",
-        "Unity.Mathematics"
+        "Unity.Mathematics",
+        "Unity.AllModel",
+        "Unity.AllHotfix"
     ],
     "includePlatforms": [
         "Editor"
