把Unity.Codes编译通过

--- a/Unity/Assets/Scripts/Codes/Model/Generate/Server/Unity.ConfigServer.asmdef
+++ b/Unity/Assets/Scripts/Codes/Model/Generate/Server/Unity.ConfigServer.asmdef
@@ -1,15 +1,7 @@
 {
-    "name": "Unity.Codes",
+    "name": "Unity.ConfigServer",
     "rootNamespace": "",
-    "references": [
-        "Unity.Core",
-        "Unity.ThirdParty",
-        "Unity.Loader",
-        "BetterStreamingAssets",
-        "Unity.Mathematics",
-        "MemoryPack",
-        "YooAsset"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
