--- a/Unity/Assets/Scripts/Editor/Unity.Editor.asmdef
+++ b/Unity/Assets/Scripts/Editor/Unity.Editor.asmdef
@@ -8,7 +8,8 @@
         "HybridCLR.Runtime",
         "HybridCLR.Editor",
         "YooAsset",
-        "Unity.Mathematics"
+        "Unity.Mathematics",
+        "Unity.Codes"
     ],
     "includePlatforms": [
         "Editor"
