--- a/Unity/Assets/Scripts/Codes/Model/Generate/Client/Unity.ConfigClient.asmdef
+++ b/Unity/Assets/Scripts/Codes/Model/Generate/Client/Unity.ConfigClient.asmdef
@@ -1,15 +1,7 @@
 {
-    "name": "Unity.Codes",
+    "name": "Unity.ConfigClient",
     "rootNamespace": "",
-    "references": [
-        "Unity.Core",
-        "Unity.ThirdParty",
-        "Unity.Loader",
-        "BetterStreamingAssets",
-        "Unity.Mathematics",
-        "MemoryPack",
-        "YooAsset"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
