提交实体方法声明实现分离功能
1.允许在实体内声明partial 方法声明, 在system类中写方法实现
2.实体方法支持任意场景热重载, 包含按钮点击等委托调用

--- a/Share/Share.SourceGenerator/Share.SourceGenerator.csproj
+++ b/Share/Share.SourceGenerator/Share.SourceGenerator.csproj
@@ -11,6 +11,7 @@
         <NoWarn>1701;1702;RS2008</NoWarn>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
