添加Unity编译模式，去掉ide编译模式

--- a/Unity/Assets/Scripts/Codes/Hotfix/Unity.Hotfix.asmdef
+++ b/Unity/Assets/Scripts/Codes/Hotfix/Unity.Hotfix.asmdef
@@ -1,13 +1,13 @@
 {
-    "name": "Unity.ModelView",
+    "name": "Unity.Hotfix",
     "rootNamespace": "ET",
     "references": [
         "Unity.ThirdParty",
         "Unity.Core",
         "Unity.Mathematics",
         "Unity.Loader",
-        "Unity.Model",
-        "YooAsset"
+        "MemoryPack",
+        "Unity.Model"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -15,7 +15,9 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "UNITY_COMPILE || UNITY_EDITOR"
+    ],
     "versionDefines": [],
-    "noEngineReferences": false
+    "noEngineReferences": true
 }
