--- a/Unity/Assets/Scripts/Codes/Model/Generate/Client/Ignore.asmdef
+++ b/Unity/Assets/Scripts/Codes/Model/Generate/Client/Ignore.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Unity.ConfigClient",
+    "name": "Ignore.Generate.Client",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
