--- a/Unity/Assets/Scripts/Codes/Model/Unity.Model.asmdef
+++ b/Unity/Assets/Scripts/Codes/Model/Unity.Model.asmdef
@@ -1,13 +1,11 @@
 {
-    "name": "Unity.Hotfix",
+    "name": "Unity.Model",
     "rootNamespace": "ET",
     "references": [
         "Unity.ThirdParty",
         "Unity.Core",
         "Unity.Mathematics",
-        "Unity.Loader",
-        "MemoryPack",
-        "Unity.Model"
+        "MemoryPack"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -15,7 +13,9 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "UNITY_COMPILE || UNITY_EDITOR"
+    ],
     "versionDefines": [],
     "noEngineReferences": true
 }
