进一步优化成自动编译
1.优化成自动编译, 无限接近Unity原生编码体验;
2.将忽略配置放到Settings目录, Scripts目录下的Ignore.asmdef文件加入版本管理的忽略列表;
3.简单整理了一下忽略列表文件, 有些文件看不懂就没有改动，看起来是历史遗留文件

--- a/Unity/Assets/Scripts/Hotfix/Unity.Hotfix.asmdef
+++ b/Unity/Assets/Scripts/Hotfix/Unity.Hotfix.asmdef
@@ -16,7 +16,7 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [
-        "UNITY_COMPILE || UNITY_EDITOR"
+        "ET_COMPILE || UNITY_EDITOR"
     ],
     "versionDefines": [],
     "noEngineReferences": true
