--- a/Unity/Assets/Scripts/Model/Unity.Model.asmdef
+++ b/Unity/Assets/Scripts/Model/Unity.Model.asmdef
@@ -14,7 +14,7 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [
-        "UNITY_COMPILE || UNITY_EDITOR"
+        "ET_COMPILE || UNITY_EDITOR"
     ],
     "versionDefines": [],
     "noEngineReferences": true
