简化代码功能，分开成两个快捷键

--- a/Unity/Assets/Scripts/Hotfix/Unity.Hotfix.asmdef
+++ b/Unity/Assets/Scripts/Hotfix/Unity.Hotfix.asmdef
@@ -16,7 +16,7 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [
-        "ET_COMPILE || UNITY_EDITOR"
+        "UNITY_COMPILE || UNITY_EDITOR"
     ],
     "versionDefines": [],
     "noEngineReferences": true
