--- a/Unity/Packages/com.et.loader/Scripts/Editor/Unity.Editor.asmdef
+++ b/Unity/Packages/com.et.loader/Scripts/Editor/Unity.Editor.asmdef
@@ -7,7 +7,8 @@
         "HybridCLR.Runtime",
         "HybridCLR.Editor",
         "YooAsset",
-        "Unity.Mathematics"
+        "Unity.Mathematics",
+        "Unity.ThirdParty"
     ],
     "includePlatforms": [
         "Editor"
