--- a/Unity/Packages/com.et.loader/Scripts/Loader/Unity.Loader.asmdef
+++ b/Unity/Packages/com.et.loader/Scripts/Loader/Unity.Loader.asmdef
@@ -6,7 +6,8 @@
         "HybridCLR.Runtime",
         "MemoryPack",
         "YooAsset",
-        "YooAsset.Editor"
+        "YooAsset.Editor",
+        "Unity.ThirdParty"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
