--- a/Unity/Packages/com.et.thirdparty/Scripts/Unity.ThirdParty.asmdef
+++ b/Unity/Packages/com.et.thirdparty/Scripts/Unity.ThirdParty.asmdef
@@ -1,11 +1,7 @@
 {
-    "name": "Unity.Core",
+    "name": "Unity.ThirdParty",
     "rootNamespace": "ET",
-    "references": [
-        "Unity.Mathematics",
-        "MemoryPack",
-        "Unity.ThirdParty"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
