--- a/Share/Analyzer/Share.Analyzer.csproj
+++ b/Share/Analyzer/Share.Analyzer.csproj
@@ -23,7 +23,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="../../Unity/Assets/Scripts/Core/Helper/StringHashHelper.cs" />
+        <Compile Include="../../Unity/Packages/com.et.core/Scripts/Core/Helper/StringHashHelper.cs" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.0.1" PrivateAssets="all" />
